kustomize/plone/Deployment-plone.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plone
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      pflaeging.net/deployment: plone
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        pflaeging.net/deployment: plone
    spec:
      containers:
      - image: plone:latest
        imagePullPolicy: Always
        name: plone
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
