kustomize/plone/Deployment-zeo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zeo
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      pflaeging.net/deployment: zeo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        pflaeging.net/deployment: zeo
    spec:
      containers:
      - image: docker.io/plone/plone-zeo:latest
        resources: {}
        imagePullPolicy: Always
        name: plone-zeo
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data
          name: data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: data
status: {}
