kustomize/plone/Service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    pflaeging.net/service: nginx
  name: nginx
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8081
  selector:
    pflaeging.net/deployment: nginx
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
