kustomize/plone/Service-plone.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    pflaeging.net/service: plone
  name: plone
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    pflaeging.net/deployment: plone
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
