kustomize/plone/Service-zeo.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    pflaeging.net/service: zeo
  name: zeo
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    pflaeging.net/deployment: zeo
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
