kustomize/plone/Route-master.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: plone-master
#  annotations:
#    kubernetes.io/tls-acme: 'true'
  labels:
    pflaeging.net/service: plone
spec:
  to:
    kind: Service
    name: plone
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
status: {}
