kustomize/plone/Route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: site
#  annotations:
#    kubernetes.io/tls-acme: 'true'
spec:
  to:
    kind: Service
    name: nginx
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
status: {}
